 - A bit of code cleanup, with an emphasis on using proper XML/AIML terminology
   whenever possible.
 - Fixed some exception-masking in the 'condition' element processor, which could
   prevent AIML parse errors from being reported.
 - Added full support for the "bot" tag (previously only the 'bot name="name"'
   form was supported).  Bot predicates are set using the Kernel.setBotPredicate()
   function.  Note that Kernel.getBotName() and Kernel.setBotName() have been
   deprecated, and will disappear in a future release.

version 0.6.1:
 - Fixed undefined variable exception that was thrown whenever there was no
   match for the user's input.
 - Fixed an infinite recursion bug caused by processing two or more nested
   'srai' or 'sr' elements.

version 0.6
 - Completely rewrote the LearnHandler class (which handles all AIML parsing)
   to be much less forgiving of incorrect AIML.  Currently, any AIML errors
   outside of "template" elements should be caught and reported at load-time.
   AIML errors inside templates are still not detected until run-time.
 - Added support for atomic 'person' and 'person2' tags (they implicitly use
   'star' as their contents if none are provided).
 - Oops; Kernel.respond() was DEFINITELY not thread-safe.  Now it is, provided
   you're using Python's standard 'threading' module. If not, you'll have to
   provide your own mutual-exclusion system to ensure that only one thread
   is calling Kernel.respond() at a time.
 - Recursive tags ('srai' and 'sr') no longer add their intermediate results
   to the input and output history.
 - EXPERIMENTAL FEATURE: persistent sessions.  If enabled using
   Kernel.persistentSessions(True), session data will be written to disk
   after every response.  This lets session data be preserved when the
   Kernel is destroyed, at the expense of a small performance hit (all
   that extra disk I/O).  The semantics of this feature may change in future
   releases!