@@ -75,17 +75,17 @@ updating the tests in Kernel.py!
 <!-- person -->
 <category>
 <pattern>TEST PERSON</pattern>
-<template><person>I think you know that your actions threaten me and mine.</person></template>
-</category>
-<category>
-<pattern>TEST PERSON *</pattern>
-<template><person/></template>
+<template><person>I think he knows that his actions threaten me and mine.</person></template>
 </category>
 
 <!-- person2 -->
 <category>
 <pattern>TEST PERSON2</pattern>
-<template><person2>I think he knows that his actions threaten me and mine.</person2></template>
+<template><person2>I think you know that your actions threaten me and mine.</person2></template>
+</category>
+<category>
+<pattern>TEST PERSON2 *</pattern>
+<template><person2/></template>
 </category>
 <!-- random -->
 <category>
